Added 'list' command

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ pgxn.client 0.1a3
 =================
 
 - Fixed executable mode for scripts unpacked from the zip files.
+- Added 'list' command.
 
 
 pgxn.client 0.1a2
