--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@ master
 ======
 
 - The spec can point to a local file/directory for install
+- Read the sha1 from the META.json as it may be different from the one
+  in the dist.json
 
 
 pgxn.client 0.1a3
