Dropped list command, using info --versions instead

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+master
+======
+
+- Dropped list command (use info --versions instead).
+- Skip extension load/unload if the provided file is not sql.
+
+
 pgxnclient 0.1a4
 ================
 
