--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+pgxnclient 0.2.1
+================
+
+- Lowercase search for distributions in the API (issue #3).
+- Fixed handling of zip files not containing entries for the directory.
+
+
 pgxnclient 0.2
 ==============
 
