--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ pgxnclient 1.0.1
 ================
 
 - Fixed simplejson dependency on Python 2.6 (ticket #8)
+- Added 'pgxn help CMD' as synonim for 'pgxn CMD --help' (ticket #7)
 
 
 pgxnclient 1.0
