Fixed a few compatibility problems with Python 3

--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,9 @@
 pgxnclient 1.0.1
 ================
 
-- Fixed simplejson dependency on Python 2.6 (ticket #8)
-- Added 'pgxn help CMD' as synonim for 'pgxn CMD --help' (ticket #7)
+- Fixed simplejson dependency on Python 2.6 (ticket #8).
+- Added 'pgxn help CMD' as synonim for 'pgxn CMD --help' (ticket #7).
+- Fixed a few compatibility problems with Python 3.
 
 
 pgxnclient 1.0
