--- a/CHANGES
+++ b/CHANGES
@@ -27,7 +27,7 @@ pgxnclient 0.3
   additional commands to be implemented in external scripts and in any
   language.
 - commands accept extension names too, not only specs.
-- Added ``help`` command to get informations about program and commands.
+- Added ``help`` command to get information about program and commands.
 
 
 pgxnclient 0.2.1
