Raise a controlled exception if popen doesn't find the command
Fix issue #11.

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,13 @@
 PGXN Client changes log
 -----------------------
 
+pgxnclient 1.0.2
+================
+
+- Don't crash with a traceback if some external command is not found
+  (ticket #11).
+
+
 pgxnclient 1.0.1
 ================
 
