--- a/CHANGES
+++ b/CHANGES
@@ -7,7 +7,7 @@ pgxnclient 1.0.3
 ================
 
 - Can deal with extensions whose ``Makefile`` is created by ``configure``
-  and with makefile not in the package root. Patch provided by Hithoshi
+  and with makefile not in the package root. Patch provided by Hitoshi
   Harada (ticket #12).
 
 
