Don't use a default sudo program
--sudo's argument is now optional, defaulting to 'sudo'. If not specified,
and the target directory is not writable, fail.

Fix issue #13

This is a behavioural change from previous version, so bumping the
minor version number.

--- a/CHANGES
+++ b/CHANGES
@@ -3,12 +3,14 @@
 PGXN Client changes log
 -----------------------
 
-pgxnclient 1.0.4
-================
+pgxnclient 1.1
+==============
 
+- ``sudo`` is not invoked automatically: the ``--sudo`` option must be
+  specified if the user has not permission to write into PostgreSQL's libdir
+  (ticket #13). The ``--sudo`` option can also be invoked without argument.
 - Make sure the same ``pg_config`` is used both by the current user and by
-  sudo (ticket #13).
-- Don't run ``sudo`` if not required (e.g. lib directory is writable).
+  sudo.
 
 
 pgxnclient 1.0.3
