Dropped support for Python 2.4
This way we don't have to worry about missing ordered dicts, can use
try-except-finally, with construct etc.

Actually I would drop py 2.5 as well, in order to use b"" strings, but for the
moment I can live with the b() function.

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ PGXN Client changes log
 pgxnclient 1.1
 ==============
 
+- Dropped support for Python 2.4.
 - ``sudo`` is not invoked automatically: the ``--sudo`` option must be
   specified if the user has not permission to write into PostgreSQL's libdir
   (ticket #13). The ``--sudo`` option can also be invoked without argument.
