Documenting tarball support in change log

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,13 +9,18 @@ David Wheeler
 
     He is the PGXN mastermind: a lot of helpful design discussions.
 
-Andrey Popp
+Peter Eisentraut
 
-    Make selection. Helped the program not to suck on BSD!
+    First implementation of tarball support. Auto-sudo is not a good idea, I
+    got it.
 
 Hitoshi Harada
 
     Tricky installation corner cases.
+
+Andrey Popp
+
+    Make selection. Helped the program not to suck on BSD!
 
 Also thank you everybody for the useful discussions on the PGXN mailing list,
 bug reports, proofreading the docs and the general support to the project.
