--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ PGXN Client changes log
 pgxnclient 1.2
 ==============
 
+- Added support for ``.tar`` files (ticket #17).
 - ``gmake`` if used in favour of ``make`` for platforms where the two are
   distinct, such as BSD (ticket #14).
 - Added ``--make`` option to select the make executable (ticket #16).
