Avoid swallowing the exit status from arg parser errors
Fixes issue #23

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,13 @@
 PGXN Client changes log
 -----------------------
 
+pgxnclient 1.2.2
+================
+
+- Exit with nonzero return code after command line parsing errors
+  (ticket #23).
+
+
 pgxnclient 1.2.1
 ================
 
