--- a/CHANGES
+++ b/CHANGES
@@ -4,12 +4,17 @@ PGXN Client changes log
 -----------------------
 
 
-pgxnclient 1.2.2
-================
+pgxnclient 1.3
+==============
 
+- Use https by default to access the PGXN API.
 - Dropped support for Python < 2.7 and Python 3 < 3.4.
 - Exit with nonzero return code after command line parsing errors
   (ticket #23).
+- Don't fail if some directories in the ``PATH`` are not readable
+  (ticket #24).
+- Fixed parsing of server version numbers with PostgreSQL beta versions
+  (ticket #29).
 - Use six to make the codebase portable between Python 2 and 3.
 
 
