--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ pgxnclient 1.3
 
 - Use https by default to access the PGXN API.
 - Dropped support for Python < 2.7 and Python 3 < 3.4.
+- Logging information emitted on stdout instead of stderr.
 - Exit with nonzero return code after command line parsing errors
   (ticket #23).
 - Don't fail if some directories in the ``PATH`` are not readable
