--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ pgxnclient 1.3.1
 ================
 
 - Fixed error running ``pgxn`` with no argument (ticket #38).
+- Ignore `.psqlrc` file in all commands (ticket #39).
 
 
 pgxnclient 1.3
