--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ pgxnclient 1.3.1
 - Fixed error running ``pgxn`` with no argument (ticket #38).
 - Ignore ``.psqlrc`` file in all commands (ticket #39).
 - Fixed PostgreSQL version number parsing after v10 (ticket #40).
+- Added test files to the sdist package (ticket #36).
 - ``tests`` directory not included in the installed package (ticket #37).
 
 
